# cia-world-factbook

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: build_registry.py  generate_test_data.py
src/cia_world_factbook/: __init__.py  _loader.py  _wrapper.py
tests/: test_api.py  test_data_points.py  test_loader.py  test_normalize.py  test_performance.py  test_registry.py  test_wrapper.py
