[project]
name = "cia-world-factbook"
version = "0.1.0"
description = "Pythonic access to CIA World Factbook data"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Ryan Parks", email = "rnparks@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rnparks/cia-world-factbook"
Repository = "https://github.com/rnparks/cia-world-factbook"
Issues = "https://github.com/rnparks/cia-world-factbook/issues"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
